# imessage-bots

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_sdk.py
docs/: .gitbook.yaml  README.md  SUMMARY.md
docs/advanced/: custom-endpoints.md
docs/api-reference/: bot-class.md
docs/best-practices/: deployment.md
docs/cli/: overview.md
docs/examples/: echo-bot.md
docs/getting-started/: installation.md  quick-start.md
examples/: command_bot.py  regex_bot.py
imessage-bots/docs/: BlueBubbles.postman_collection.json
imessage-bots/src/bots/feedback-bot/: config.py  feedback_ai.py  linear_integration.py
imessage-bots/src/bots/gork-bot/: README.md  models.py
imessage-bots/src/bots/lover-bot/: README.md  lover_ai.py  main.py  pyproject.toml
imessage-bots/src/bots/lover-bot-sdk/: COMPARISON.md  README.md  config.py  conversation_state.py  main.py  models.py  pyproject.toml
imessage-bots/src/bots/meeting-scheduler/: conversation_state.py  meeting_parser.py  models.py  pyproject.toml  requirements.txt
imessage-bots/src/bots/recap-bot/: config.py  main.py  message_tracker.py  models.py  test_bot.py
imessage-bots/src/bots/resume-roast/: conversation_state.py  linkedin_scraper.py  roast_generator.py
imessage_bot_framework/: __init__.py
imessage_bot_framework/cli/: __init__.py  main.py
imessage_bot_framework/core/: __init__.py  bot.py  chat.py  message.py
imessage_bot_framework/decorators/: __init__.py  patterns.py
imessage_bot_framework/state/: __init__.py  state.py
src/bots/: env.example
src/bots/feedback-bot/: README.md  conversation_state.py  env.example  main.py  models.py  pyproject.toml  test_linear.py
src/bots/gork-bot/: config.py  conversation_state.py  gork_ai.py  main.py  pyproject.toml
src/bots/lover-bot/: config.py  conversation_state.py  main.py  pyproject.toml
src/bots/meeting-scheduler/: README.md  config.py  google_calendar.py  main.py  setup.py  test_parser.py
src/bots/recap-bot/: README.md  chat_states.json  main.py  message_summarizer.py  pyproject.toml  requirements.txt  setup.py
src/bots/resume-roast/: README.md  STAGEHAND_SETUP.md  config.py  main.py  models.py  pyproject.toml  requirements.txt  roast_generator.py  stagehand_scraper.py  test_stagehand.py
