[tool.poetry]
name = "imessage-bot-framework"
version = "0.1.0"
description = "A simple, flexible framework for building iMessage bots"
authors = ["iMessage Bot Framework Team <contact@imessage-bot-framework.com>"]
readme = "README.md"
homepage = "https://github.com/your-username/imessage-bot-framework"
repository = "https://github.com/your-username/imessage-bot-framework"
documentation = "https://imessage-bot-framework.readthedocs.io/"
keywords = ["imessage", "bot", "framework", "chatbot", "bluebubbles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "imessage_bot_framework"}]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.100.0"
uvicorn = "^0.20.0"
pydantic = "^2.0.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.12.0"

[tool.poetry.group.plugins.dependencies]
openai = {version = "^1.0.0", optional = true}
sqlalchemy = {version = "^2.0.0", optional = true}
apscheduler = {version = "^3.10.0", optional = true}
beautifulsoup4 = {version = "^4.11.0", optional = true}
pillow = {version = "^10.0.0", optional = true}

[tool.poetry.extras]
ai = ["openai"]
database = ["sqlalchemy"]
scheduler = ["apscheduler"]
web = ["beautifulsoup4"]
image = ["pillow"]
all = ["openai", "sqlalchemy", "apscheduler", "beautifulsoup4", "pillow"]

[tool.poetry.scripts]
imessage-bot = "imessage_bot_framework.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short" 