[tool.poetry]
name = "lover-bot"
version = "0.1.0"
description = "An AI lover bot that texts you like your significant other"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "lover_bot", from = "."}]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = {extras = ["standard"], version = "^0.115.13"}
uvicorn = {extras = ["standard"], version = "^0.24.0"}
requests = "^2.31.0"
pydantic = "^2.0.0"
python-multipart = "^0.0.18"
python-dotenv = "^1.0.0"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 